--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ html, body {
 
 #experiment-browser {
   width: 100%;
-  overflow: none;
+  overflow: hidden;
 }
 
 .my-box {
@@ -66,4 +66,42 @@ html, body {
   height: 100%;
   float: left;
 }
-  
+
+.program-operations .panel,
+.program-operations .panel-heading,
+.program-operations .panel-default>.panel-heading {
+  background-color: transparent;
+  border: none;
+}
+
+.program-operations .panel {
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
+}
+
+.program-operations .run-button {
+  float: right;
+}
+
+.program-operations .panel-title:before {
+  content: '⚌ ';
+  padding-right: 1.5rem;
+}
+
+.modelbrowser #model-title {
+  display: inline;
+}
+
+.modelbrowser #heading {
+  margin-bottom: 1rem;
+}
+
+.modelbrowser .actions {
+  float: right;
+}
+
+.vertical-align {
+  display: flex;
+  align-items: center;
+}
